<resources>
    <string name="app_name">ConvT</string>

    <string name="baseUrl">https://free.currconv.com/</string>
    <string name="apiKey">da803a73ced3b558f278</string>

    <string name="loading">Loading..</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="amount">Amount:</string>
    <string name="convert">Convert</string>
    <string name="result">Result:</string>

</resources>
