<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity">

    <Button
            android:text="@string/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonConvert"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textResult"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="6"
            android:id="@+id/editAmount"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.32999998"/>
    <TextView
            android:text="@string/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTo"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinnerTo" app:layout_constraintStart_toStartOf="@+id/spinnerTo"
            app:layout_constraintEnd_toEndOf="@+id/spinnerTo"/>
    <TextView
            android:text="@string/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textFrom"
            app:layout_constraintStart_toStartOf="@+id/spinnerFrom"
            app:layout_constraintEnd_toEndOf="@+id/spinnerFrom" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinnerFrom"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerFrom"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/editAmount"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/editAmount" android:paddingRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editAmount"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTo"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/editAmount"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textResult" android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textResult"/>
    <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAmount"
            app:layout_constraintStart_toStartOf="@+id/editAmount"
            app:layout_constraintEnd_toEndOf="@+id/editAmount" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editAmount"/>
    <TextView
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textResult" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editAmount" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textResultValue"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textResultValue"
            app:layout_constraintBottom_toBottomOf="@+id/textResult"
            app:layout_constraintTop_toTopOf="@+id/textResult"
            app:layout_constraintStart_toEndOf="@+id/textResult" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>